--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ REDIS_HOST=redis-17385.crce182.ap-south-1-1.ec2.redns.redis-cloud.com
 REDIS_PORT=17385
 REDIS_PASSWORD=mpaHPcZnz6Qpx2ci4uzCRbDya5Ptsor2
 GOOGLE_AI_KEY=AIzaSyDMAzYOPWRJA4aVKKZ-GUh8kUoic6KEpAU
+FRONTEND_URL_LOCAL=http://localhost:5173
+FRONTEND_URL_PROD=https://ai-developer-using-gemeni-ai.vercel.app
